--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "dependencies": {
-    "@forge/bridge": "4.2.0",
-    "@forge/react": "10.10.1",
-    "@forge/resolver": "1.6.3",
+    "@forge/bridge": "^4.4.0",
+    "@forge/react": "^10.10.3-experimental-147ff14",
+    "@forge/resolver": "^1.6.6",
     "react": "^18.2.0"
   }
 }
